--- a/coating_config.json
+++ b/coating_config.json
@@ -25,6 +25,9 @@
         "sheets_pos" : "A2:D"         
     },
     "parameters" : {
-        "number_tries" : 3
+        "number_tries" : 3,
+        "file_name_pattern" : "Product_coating_",
+        "report_path" : "C:/Users/fausto.akio/Documents/Reports/Coating",
+        "report_path_done" : "C:/Users/fausto.akio/Documents/Reports/Coating/Done"
     }
 }
