Automations updated for logger heat_map fill values function fix

--- a/logger_config.json
+++ b/logger_config.json
@@ -15,7 +15,7 @@
         "console": {
             "class": "logging.StreamHandler",
             "formatter": "brief",
-            "level": "ERROR",
+            "level": "DEBUG",
             "stream": "ext://sys.stdout"
         },
         "file_handler": {
